main Carousel finish

--- a/src/containers/home/Home.css
+++ b/src/containers/home/Home.css
@@ -1,3 +1,10 @@
-* {
-  margin: 0;
+.container-home .carousel-item {
+  display: flex;
+}
+
+@media (max-width: 480px) {
+  .container-home .carousel-item {
+    background-color: aqua;
+    display: none;
+  }
 }/*# sourceMappingURL=Home.css.map */
