--- a/src/containers/home/Home.scss
+++ b/src/containers/home/Home.scss
@@ -1,3 +1,16 @@
-*{
-    margin: 0;
+.container-home {
+    .carousel-item {
+        display: flex;
+    }
+}
+@media (max-width: 880px) {
+    .container-home {}
+}
+@media (max-width: 480px) {
+    .container-home {
+        .carousel-item {
+            background-color: aqua;
+            display: none;
+        }
+    }
 }
