--- a/src/components/sliderHome/SliderStyle.scss
+++ b/src/components/sliderHome/SliderStyle.scss
@@ -1,17 +1,15 @@
-// @import "../../colors";
-// @import "../../fonts";
-
 .carousel-root {
   display: flex;
   flex-direction: row;
-  position: absolute;
-  top: 0px;
-  height: 100vh;
-  // width: 100vw;
+  position: relative;
+  margin-top: -40px;
   background-image: url('../../images/pattern-bg.png');
+  height: 100%;
+  // background-size: contain;
   .carousel-item {
     bottom: 80px;
     position: relative;
+
     .carousel-item-content {
       position: absolute;
       top: 70%;
@@ -21,68 +19,69 @@
       font-weight: bold;
       color: #000000;
       z-index: 1;
-      h1{
+
+      h1 {
         font-size: 64px;
         font-weight: 700;
         width: 60px;
-       }
-       p {
+      }
+
+      p {
         margin-top: 10px;
         font-size: 30px;
         font-weight: 400;
-       }
-        button {
-          margin-top: 30px;
-          background-color: orange;
-          padding: 12px;
-          border-radius: 20px;
-        }
+      }
+
+      button {
+        margin-top: 30px;
+        background-color: orange;
+        padding: 12px;
+        border-radius: 20px;
+      }
     }
-    .description1{
+
+    .description1 {
       // background-color: #ca1010;
       width: 70%;
       height: 80%;
       text-align: start;
       color: black;
       z-index: 1;
-      // font-family: $font-B;
     }
-    .description2{
-      // background-color: #ca1010;
-      // font-family: $font-B;
+
+    .description2 {
+
       width: 70%;
       height: 80%;
       text-align: end;
       color: rgb(0, 0, 0);
       z-index: 1;
-     
+
     }
-    .description3{
-      // background-color: #ca1010;
-      // font-family: $font-B;
+
+    .description3 {
       width: 70%;
       height: 70%;
       text-align: start;
-    
+
       z-index: 1;
     }
   }
 
-  // background-color: red;
 }
+
 .carousel-slider {
   flex: 1;
 
 }
+
 .carousel .control-dots {
-  // background-color: chartreuse;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-end;
   align-content: center;
   margin-bottom: 500px;
-  // align-self: flex-end;
   bottom: 20px;
 }
 
@@ -93,36 +92,28 @@
   border-radius: 50%;
   background-color: rgba(24, 23, 23, 0.5);
   box-shadow: none;
-  
+
 }
 
 .carousel .control-dots .dot.selected {
   background-color: rgba(158, 14, 14, 0.9);
 }
-// .carousel-pagination {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: center;
-//   align-items: flex-end;
-//   margin-right: 0px;
-//   background-color: aqua;
-//   color: black;
-// }
 
-@media (max-width: 1110px){
+@media (max-width: 1110px) {
   .carousel-root {
 
     .carousel-item {
       display: flex;
       height: 100vh;
-     
+
       // display: none;
       // background-color: aqua;
     }
   }
 }
-@media (max-width: 480px){
-  .carousel-root {    
+
+@media (max-width: 600px) {
+  .carousel-root {
     .carousel-item {
       display: none;
       // background-color: aqua;
