--- a/src/containers/home/Home.scss
+++ b/src/containers/home/Home.scss
@@ -1,12 +1,85 @@
 .container-home {
+    height: 100vh;
+    // background-color: aqua;
+    display: flex;
+    flex-direction: column;
+    // justify-content: center;
+    align-items: center;
+
     .carousel-item {
         display: flex;
     }
+
+    .container-home_accion {
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        transform: translateY(-10%);
+        z-index: 2;
+        height: 400px;
+        img{  
+             margin: 0 30px 0 30px;
+            }
+        .box-imag{
+            
+            display: flex; 
+            flex-direction: column; 
+            justify-content: center; 
+            align-items: center; 
+            width: 40%;
+            // background-color: aqua;
+            gap: 5;
+            
+        }
+       
+    }
+    .dog-eating{
+        width: 25%;
+    }
+
 }
-@media (max-width: 880px) {
-    .container-home {}
+
+@media (max-width: 960px) {
+    .container-home {
+
+        .container-home_accion {
+            display: flex;
+            flex-direction: column;
+            // background-color: aqua;
+            justify-content: center;
+            align-items: center;
+            margin: 0;
+            padding: 0;
+            width: 100vw;
+            gap: 0;
+            margin: auto;
+            padding: 0;
+            transform: translateY(-5%);
+            // background-color: aqua;
+            height: 100%;
+            img {
+                width: 100%;
+                height: 350px;
+                margin: 0px;
+                padding: 0;
+                gap: 0;
+                // background-color: aqua;
+                top: 0;
+            }
+            .box-imag{
+                gap: 0;
+            }
+        }
+        .dog-eating{
+            margin: 10%;
+            width: 80%;
+            height: 700px;
+        }
+    }
 }
-@media (max-width: 480px) {
+
+@media (max-width: 600px) {
     .container-home {
         .carousel-item {
             background-color: aqua;
